@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-07-14 19:59:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-95
+
+    Summary:
+      catalog, fix un-indexing
+    Revision:
+      itools--main--0.9--patch-95
+
+
+    modified files:
+     Changelog catalog/IIndex.py
+
+
 2005-07-13 16:14:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-94
 
     Summary:
